<resources>
    <string name="app_name">RUCafeAndriod</string>

    <string name="header_main">Welcome to RUCafe!</string>
    <string name="add_button">ADD TO ORDER</string>
    <string name="subtotal_default">Subtotal: $0.00</string>
    <string name="total_default">Total: $0.00</string>

    <string name="select_donut_type">Choose your flavour!</string>
    <string name="donut_selection">Donut Selection</string>
    <string name="cake_donuts">Cake Donuts</string>
    <string name="yeast_donuts">Yeast Donuts</string>
    <string name="hole_donuts">Donut Holes</string>
    <string name="padding"></string>
    <string name="donut_inc">—             +</string>

    <string name="cake_chocolate">Chocolate</string>
    <string name="cake_blueberry">Blueberry</string>
    <string name="cake_lemon">Lemon</string>
    <string name="cake_matcha">Matcha</string>
    <string name="yeast_cookie">Cookies and Cream</string>
    <string name="yeast_chocolate">Chocolate</string>
    <string name="yeast_raspberry">Raspberry</string>
    <string name="yeast_strawberry">Strawberry</string>
    <string name="yeast_boston">Boston Creme</string>
    <string name="hole_chocolate">Chocolate</string>
    <string name="hole_pumpkin">Pumpkin</string>
    <string name="hole_glazed">Glazed</string>
    <string name="sign_remove">—</string>
    <string name="sign_add">+</string>

    <string name="coffee_selection">Coffee Selection</string>
    <string name="quantity">Quantity: </string>
    <string name="size">Size: </string>
    <string name="short_size">Short</string>
    <string name="tall_size">Tall</string>
    <string name="grande_size">Grande</string>
    <string name="venti_size">Venti</string>
    <string name="s_cream">Sweet Cream</string>
    <string name="f_vanilla">French Vanilla</string>
    <string name="i_cream">Irish Cream</string>
    <string name="caramel">Caramel</string>
    <string name="mocha">Mocha</string>

    <string name="basket_selection">View Basket</string>
    <string name="delete_button">Delete Item</string>
    <string name="finalize_order">Finalize</string>
    <string name="tax_default">Tax: $0.00</string>

    <string name="store_orders">Store Orders</string>
    <string name="order_num">Order Number</string>
    <string name="cancel">Cancel Order</string>
    <string name="export">Export Orders</string>

    <string-array name="itemNames">
        <item>Chocolate Glaze</item>
        <item>Strawberry Glaze</item>
        <item>Boston Cream</item>
        <item>Cookies &amp; Cream</item>
        <item>Raspberry Glaze</item>
        <item>Lemon</item>
        <item>Blueberry</item>
        <item>Chocolate</item>
        <item>Matcha</item>
        <item>Brownie</item>
        <item>Glazed</item>
        <item>Pumpkin</item>
    </string-array>

</resources>