<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e8dbc8">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"

        android:fontFamily="@font/wnggfont"
        android:text="@string/coffee_selection"
        android:textSize="30sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#faf0e1"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:contentDescription="@string/coffee_selection"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/coffee" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/coffee_size"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/size" />

            <RadioGroup
                android:id="@+id/coffee_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/short_btn"
                    android:layout_width="85dp"
                    android:layout_height="55dp"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:text="@string/short_size" />

                <RadioButton
                    android:id="@+id/tall_btn"
                    android:layout_width="85dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:text="@string/tall_size" />

                <RadioButton
                    android:id="@+id/grande_btn"
                    android:layout_width="85dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:text="@string/grande_size" />

                <RadioButton
                    android:id="@+id/venti_btn"
                    android:layout_width="85dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:text="@string/venti_size" />
            </RadioGroup>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/sweet_cream"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/s_cream" />

                    <CheckBox
                        android:id="@+id/french_vanilla"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/f_vanilla" />

                    <CheckBox
                        android:id="@+id/irish_cream"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/i_cream" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/caramel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/caramel" />

                    <CheckBox
                        android:id="@+id/mocha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mocha" />

                </LinearLayout>
            </TableRow>

        </TableLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/coffee_quantity"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/quantity" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="wrap_content"
                android:layout_height="48dp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/subtotal_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="20dp"
        android:background="#F9EFE0"
        android:text="@string/add_button"
        android:onClick="makeCoffee"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>