<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e8dbc8">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"

        android:fontFamily="@font/wnggfont"
        android:text="@string/donut_selection"
        android:textSize="30sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="75dp"

        android:layout_marginBottom="150dp"
        android:background="#faf0e1"
        android:clipToPadding="true"
        android:contentDescription="@string/select_donut_type"

        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/padTextWhy"
                android:layout_width="match_parent"
                android:layout_height="1000dp"
                android:text="@string/padding" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/wnggfont"
                android:text="@string/cake_donuts"
                android:textColor="#917447"
                android:textSize="23sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/cakechocolateButton"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/rounded_button"
                        android:contentDescription="Button to select chocolate cake donut."
                        android:foreground="@drawable/cake_chocolate"
                        android:scaleType="centerInside" />

                    <TextView
                        android:id="@+id/cakechocolateText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="75dp"
                        android:fontFamily="@font/wnggfont"
                        android:text="@string/cake_chocolate" />

                    <ImageButton
                        android:id="@+id/cakeblueberryButton"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/rounded_button"
                        android:contentDescription="Button to select blueberry cake donut."
                        android:foreground="@drawable/cake_blueberry"
                        android:scaleType="centerInside" />

                    <TextView
                        android:id="@+id/cakeblueberryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="73dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/wnggfont"
                        android:text="@string/cake_blueberry" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="203dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/cakelemonButton"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/rounded_button"
                        android:contentDescription="Button to select lemon cake donut."
                        android:foreground="@drawable/cake_lemon"
                        android:scaleType="centerInside" />

                    <TextView
                        android:id="@+id/cakelemonText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="90dp"
                        android:text="@string/cake_lemon"
                        android:fontFamily="@font/wnggfont" />

                    <ImageButton
                        android:id="@+id/cakematchaButton"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/rounded_button"
                        android:contentDescription="Button to select matcha cake donut."
                        android:foreground="@drawable/cake_matcha"
                        android:scaleType="centerInside" />

                    <TextView
                        android:id="@+id/cakematchaText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="83dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/cake_matcha"
                        android:fontFamily="@font/wnggfont" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/yeastdonutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/wnggfont"
                android:text="@string/yeast_donuts"
                android:textColor="#917447"
                android:textSize="23sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/yeastcookieButton"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/rounded_button"
                        android:contentDescription="Button to select cookies and cream yeast donut."
                        android:foreground="@drawable/yeast_cookie"
                        android:scaleType="centerInside" />

                    <TextView
                        android:id="@+id/yeastcookieText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="48dp"
                        android:fontFamily="@font/wnggfont"
                        android:text="@string/yeast_cookie" />

                    <ImageButton
                        android:id="@+id/yeastchocolateButton"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/rounded_button"
                        android:contentDescription="Button to select chocolate yeast donut."
                        android:foreground="@drawable/yeast_chocolate"
                        android:scaleType="centerInside" />

                    <TextView
                        android:id="@+id/yeastchocolateText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="75dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/wnggfont"
                        android:text="@string/yeast_chocolate" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="203dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/yeastraspberryButton"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/rounded_button"
                        android:contentDescription="Button to select raspberry yeast donut."
                        android:foreground="@drawable/yeast_raspberry"
                        android:scaleType="centerInside" />

                    <TextView
                        android:id="@+id/yeastraspberryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="75dp"
                        android:fontFamily="@font/wnggfont"
                        android:text="@string/yeast_raspberry" />

                    <ImageButton
                        android:id="@+id/yeaststrawberryButton"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/rounded_button"
                        android:contentDescription="Button to select strawberry yeast donut."
                        android:foreground="@drawable/yeast_strawberry"
                        android:scaleType="centerInside" />

                    <TextView
                        android:id="@+id/yeaststrawberryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="73dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/wnggfont"
                        android:text="@string/yeast_strawberry" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/yeastbostonButton"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="125dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_button"
                    android:contentDescription="Button to select boston creme yeast donut"
                    android:foreground="@drawable/yeast_boston"
                    android:scaleType="centerInside" />

                <TextView
                    android:id="@+id/yeastbostonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="162dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/wnggfont"
                    android:text="@string/yeast_boston" />

            </LinearLayout>

            <TextView
                android:id="@+id/holedonutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/wnggfont"
                android:text="@string/hole_donuts"
                android:textColor="#917447"
                android:textSize="23sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/holechocolateButton"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/rounded_button"
                        android:contentDescription="Button to select chocolate hole donut."
                        android:foreground="@drawable/hole_chocolate"
                        android:scaleType="centerInside" />

                    <TextView
                        android:id="@+id/holechocolateText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="75dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/wnggfont"
                        android:text="@string/hole_chocolate" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="203dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/holepumpkinButton"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/rounded_button"
                        android:contentDescription="Button to select pumpkin yeast donut."
                        android:foreground="@drawable/hole_pumpkin"
                        android:scaleType="centerInside" />

                    <TextView
                        android:id="@+id/holepumpkinText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="85dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/wnggfont"
                        android:text="@string/hole_pumpkin" />


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/holeglazedButton"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="125dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_button"
                    android:contentDescription="Button to select glazed hole donut"
                    android:foreground="@drawable/hole_glazed"
                    android:scaleType="centerInside" />

                <TextView
                    android:id="@+id/holeglazedText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="180dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/wnggfont"
                    android:text="@string/hole_glazed" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:background="#faf0e1"
        android:fillViewport="true"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="16dp"
        android:background="#F9EFE0"
        android:text="@string/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>